testing/comparison-cases/istio-bookinfo/k8s-cilium-equivalent/policies-a.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-lockdown-9080
  namespace: bookinfo-services-ns
spec:
  podSelector:
    matchLabels:
      app: details
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 9080
