testing/comparison-cases/istio-bookinfo/k8s-cilium-equivalent/policies-b.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress-lockdown-9080
  namespace: bookinfo-services-ns
spec:
  endpointSelector:
    matchLabels:
      app: details
  ingress:
  - toPorts:
    - ports:
      - port: "9080"
        protocol: TCP
